Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -32,14 +32,15 @@
    "metadata": {},
    "source": [
     "Numbers:\n",
-    "\n",
+    "Numbers in python that can be manipulated, used in print statements, dictionaries, indexes, tuples, ... etc\n",
     "Strings:\n",
-    "\n",
+    "Strings are characters inside of quotation marks. \n",
     "Lists:\n",
-    "\n",
+    "A short list of various items enclosed in brackets that can be edited\n",
     "Tuples:\n",
-    "\n",
+    "A short list of various items enclosed in parenthesis that cannot be edited\n",
     "Dictionaries:\n"
+    "A long list of various items and their values that are enclosed in curly brackets that can be edited\n"
    ]
   },
   {
