Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -39,7 +39,7 @@
     "A short list of various items enclosed in brackets that can be edited\n",
     "Tuples:\n",
     "A short list of various items enclosed in parenthesis that cannot be edited\n",
-    "Dictionaries:\n"
+    "Dictionaries:\n",
     "A long list of various items and their values that are enclosed in curly brackets that can be edited\n"
    ]
   },
