Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -50,7 +50,8 @@
     "## Numbers\n",
     "\n",
     "Write an equation that uses multiplication, division, an exponent, addition, and subtraction that is equal to 100.25.\n",
-    "\n",
+    "(5*6/2-5)^2+.25 \n \n",
+    (5*6/2-5)^2+.25,
     "Hint: This is just to test your memory of the basic arithmetic commands, work backwards from 100.25"
    ]
   },
@@ -68,10 +69,14 @@
     "Answer these 3 questions without typing code. Then type code to check your answer.\n",
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
-    "    \n",
+    "    44 \n \n",
+    4 * (6 + 5),
     "    What is the value of the expression 4 * 6 + 5 \n",
-    "    \n",
-    "    What is the value of the expression 4 + 6 * 5 "
+    "    29 \n \n",
+    4 * 6 + 5,
+    "    What is the value of the expression 4 + 6 * 5 ",
+    "    34 \n",
+    4 + 6 * 5
    ]
   },
   {
@@ -85,14 +90,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br> \n ",
+    "float",
+    print(type(3+1.5+4))
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What would you use to find a number’s square root, as well as its square? "
+    "What would you use to find a number’s square root, as well as its square? \n",
+    "I would use sqrt(num) for finding the number's square root and num^2 to find its square"
    ]
   },
   {
@@ -101,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square root:\n"
+    "# Square root: sqrt(num) \n"
    ]
   },
   {
@@ -110,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square:\n"
+    "# Square: num^2 \n"
    ]
   },
   {
@@ -135,6 +143,7 @@
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
+    print(s[1]),
     "\n"
    ]
   },
@@ -153,9 +162,11 @@
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
+    print(s[::-1]),
     "\n"
    ]
   },
+  s = 'hello'
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -173,6 +184,7 @@
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
+    print(s[-1]),
     "\n"
    ]
   },
@@ -183,6 +195,7 @@
    "outputs": [],
    "source": [
     "# Method 2:\n",
+    print(s[4]),
     "\n"
    ]
   },
@@ -206,7 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 1:\n"
+    "# Method 1:\n",
+    list1 = [0]*3,
+    print(list1)
    ]
   },
   {
@@ -215,7 +230,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 2:\n"
+    "# Method 2:\n",
+    list2 = [0,0,0],
+    print(list2)
    ]
   },
   {
