Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -70,13 +70,13 @@
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
     "    44 \n \n",
-    4 * (6 + 5),
+    print(4 * (6 + 5)),
     "    What is the value of the expression 4 * 6 + 5 \n",
     "    29 \n \n",
-    4 * 6 + 5,
+    print(4 * 6 + 5),
     "    What is the value of the expression 4 + 6 * 5 ",
     "    34 \n",
-    4 + 6 * 5
+    print(4 + 6 * 5)
    ]
   },
   {
@@ -99,8 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What would you use to find a number’s square root, as well as its square? \n",
-    "I would use sqrt(num) for finding the number's square root and num^2 to find its square"
+    "What would you use to find a number’s square root, as well as its square? \n"
    ]
   },
   {
@@ -128,6 +127,7 @@
     "## Strings"
    ]
   },
+  s = 'hello'
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -166,7 +166,6 @@
     "\n"
    ]
   },
-  s = 'hello'
   {
    "cell_type": "markdown",
    "metadata": {},
