Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -70,13 +70,13 @@
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
     "    44 \n \n",
-    #print(4 * (6 + 5)),
+    "#print(4 * (6 + 5))",
     "    What is the value of the expression 4 * 6 + 5 \n",
     "    29 \n \n",
-    #print(4 * 6 + 5),
+    "#print(4 * 6 + 5)",
     "    What is the value of the expression 4 + 6 * 5 ",
     "    34 \n",
-    #print(4 + 6 * 5)
+    "#print(4 + 6 * 5)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "source": [
     "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br> \n ",
     "float",
-    #print(type(3+1.5+4))
+    "#print(type(3+1.5+4))"
    ]
   },
   {
@@ -142,8 +142,7 @@
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
-    #s = 'hello',
-    #print(s[1]),
+    "#print(s[1])",
     "\n"
    ]
   },
@@ -162,8 +161,7 @@
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
-    #s = 'hello',
-    #print(s[::-1]),
+    "#print(s[::-1])",
     "\n"
    ]
   },
@@ -184,8 +182,7 @@
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
-    #s = 'hello',
-    #print(s[-1]),
+    "#print(s[-1])",
     "\n"
    ]
   },
@@ -196,8 +193,7 @@
    "outputs": [],
    "source": [
     "# Method 2:\n",
-    #s = 'hello',
-    #print(s[4]),
+    "#print(s[4])",
     "\n"
    ]
   },
@@ -222,8 +218,8 @@
    "outputs": [],
    "source": [
     "# Method 1:\n",
-    #list1 = [0]*3,
-    #print(list1)
+    "#list1 = [0]*3",
+    "#print(list1)"
    ]
   },
   {
@@ -233,8 +229,8 @@
    "outputs": [],
    "source": [
     "# Method 2:\n",
-    #list2 = [0,0,0],
-    #print(list2)
+    "#list2 = [0,0,0]",
+    "#print(list2)"
    ]
   },
   {
