--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "Numbers:\n",
-    "\n",
+    "cool stuff\n\n",
     "Strings:\n",
     "\n",
     "Lists:\n",
